--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
 
             {{ partial "_profile.html" . }}
             {{ partial "_experience.html" . }}
-            {{ partial "_education.html" . }}
+            {{ partial "_projects.html" . }}
 
         </div>
         <div class="content__right">
